# small-brainfuck

./: README.md  pyproject.toml
bf_interpreter/: main.py
brainfuck/: interpreter.py  main.py
small_brainfuck/: main.py
tests/: test_brainfuck.py
