[tool.poetry]
name = "bf-interpreter"
version = "0.0.1"
description = ""
authors = ["Bruno Silva Oliveira <brunooliveira095@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bf = 'bf_interpreter.main:main'
